fix:현재 필요없는 로직 제거, 매장 반환 로직 수정