@@ -1,5 +1,7 @@
 package site.benepay.domain.merchant.service;
 
+import java.util.List;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -7,20 +9,17 @@ import lombok.RequiredArgsConstructor;
 import site.benepay.domain.merchant.dto.MerchantBrandResponseDto;
 import site.benepay.domain.merchant.mapper.MerchantBrandMapper;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class MerchantBrandServiceImpl implements MerchantBrandService {
 
-    private final MerchantBrandMapper merchantBrandMapper;
+	private final MerchantBrandMapper merchantBrandMapper;
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<MerchantBrandResponseDto> getBrandList() {
-        return merchantBrandMapper.findAll().stream()
-                .map(MerchantBrandResponseDto::from)
-                .collect(Collectors.toList());
-    }
+	@Override
+	@Transactional(readOnly = true)
+	public List<MerchantBrandResponseDto> getBrandList() {
+		return merchantBrandMapper.findAll().stream()
+			.map(MerchantBrandResponseDto::from)
+			.toList();
+	}
 }
